# Text-BibTeX

./: .gitignore  BibTeX.pm  BibTeX.xs  Build.PL  CHANGES  Changes  MANIFEST  Makefile.PL  README  THANKS  btcheck  btformat  btool_faq.pod  btsort  btxs_support.c  typemap
BibTeX/: Bib.pm  Entry.pm  File.pm  Name.pm  Structure.pm  Value.pm
btparse/: ANNOUNCE  BUGS  ChangeLog  MANIFEST.SKIP  Makefile.am  README  TODO  acinclude.m4  autogen.sh  configure.ac  thoughts
btparse/doc/: Makefile.am  bt_post_processing.pod
btparse/pccts/: err.h
btparse/progs/: Makefile.am  args.h  bibparse.c  dumpnames.c
btparse/src/: .gitignore  Makefile.am  bibtex.c  bibtex_ast.c  bt_config.h  bt_config.h.in  btparse.h  btparse.h.in  err.c  error.c  format_name.c  input.c  lex_auxiliary.c  macros.c  modify.c  names.c  parse_auxiliary.c  postprocess.c  prototypes.h  scan.c  string_util.c  traversal.c  util.c
btparse/tests/: Makefile.am  macro_test.c  name_test.c  namebug.c  purify_test.c  simple_test.c  testlib.c  testlib.h  tex_test.c
btparse/tests/data/: overflow.bib
examples/: append_entries
inc/: MyBuilder.pm
inc/Capture/: Tiny.pm
inc/Config/: AutoConf.pm
inc/Config/AutoConf/: Linker.pm
lib/Text/: BibTeX.pm
lib/Text/BibTeX/: Bib.pm  BibFormat.pm  BibSort.pm  Entry.pm  File.pm  Name.pm  NameFormat.pm  Structure.pm  Value.pm
scripts/: btcheck  btformat  btsort  build.pl
t/: 00.init.t  bib.t  common.pl  from_file.t  macro.t  modify.t  nameformat.t  namelist.t  names.t  output.t  overflow.t  parse.t  parse_f.t  parse_s.t  purify.t  split_names  zz.cleanup.t
xscode/: BibTeX.xs  btxs_support.c
